# commitizen-xcodeproj

./: CHANGELOG.md  README.md  pyproject.toml
tests/: test_xcodeproj_version_provider.py
