[tool.poetry]
name = "commitizen-xcodeproj"
version = "0.0.0"
description = "Commitizen version provider for Xcode projects."
authors = ["Karsten Silkenbäumer <993392+kassi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "commitizen_xcodeproj", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
